# smart-commit

./: Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: git-smart-commit
src/: args.rs  commands.rs  git.rs  lib.rs  main.rs  open_ai.rs  prompt.rs  prompt.txt
src/prompt/: common.rs  mod.rs  single_request.rs
src/tui/: common.rs  input.rs  mod.rs  options_menu.rs
tests/: common.rs  integration_test.rs
