[package]
name = "smart-commit"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive", "env"] }
console = "0.15.8"
once_cell = "1.19.0"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
