[package]
name = "smart-commit"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive", "env"] }
console = "0.15.8"
git2 = "0.18.1"
once_cell = "1.19.0"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

[dev-dependencies]
assert_cmd = "2.0.13"
fs_extra = "1.3.0"
predicates = "3.1.0"
tempdir = "0.3.7"
